feat: complete account profile APIs
